Fix alignment i header.

--- a/projects/komponentkartan/src/assets/partials/_components.grid.scss
+++ b/projects/komponentkartan/src/assets/partials/_components.grid.scss
@@ -10,6 +10,7 @@ vgr-grid {
     margin-bottom: 2px;
     background: white;
     display: flex;
+    align-items: center;
 
     vgr-grid-column,
     vgr-grid-header-column {
